Update styling and add assets for background video

--- a/3rd project/threelanguage.html
+++ b/3rd project/threelanguage.html
@@ -3,9 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3rd project</title>
+    <meta name="description" content="A brief description of the page content">
+    <meta name="keywords" content="HTML, CSS, JavaScript, web development">
+    <meta name="author" content="TreyderEduard">
+    <link rel="stylesheet" href="threelanguage.css">
+    <title>Document</title>
 </head>
 <body>
+   <section class="hero">
+    <video class="back-video" autoplay muted loop>
+        <source src="assets/valentine.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
     
+    <section class="content">
+        <h2>Happy Valentine's Day</h2>
+        <p>Will you be my dishwasher?</p>
+        <div class="button-wrapper">
+            <button onclick="">Yes</button>
+            <button onclick="">No haha</button>
+        </div>
+    </section>
+   </section>
+    <script src="script.js"></script>
 </body>
 </html>
